tests/paczka1/small_fuzzy/45221219.err
Error in line 7: 20m A844 29,40
Error in line 10: A844 A7 37,63
